<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
	</parent>

	<groupId>it.gov.pagopa</groupId>
	<artifactId>idpay-admissibility-assessor</artifactId>
	<name>idpay-admissibility-assessor</name>
	<version>1.4.0</version>

	<properties>
		<java.version>21</java.version>
		<argLine>-Duser.timezone=Europe/Rome</argLine> <!-- placeholder to make works both the remote pipeline with sonar cloud and locally -->
	</properties>

	<dependencies>
		<!--SB STARTER-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis-reactive</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
			<version>2.3.0</version>
		</dependency>

		<!-- Azure -->
		<dependency>
			<groupId>com.azure.spring</groupId>
			<artifactId>spring-cloud-azure-stream-binder-servicebus</artifactId>
		</dependency>

		<!--DROOLS-->
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-core</artifactId>
			<version>7.74.1.Final</version>
		</dependency>
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-compiler</artifactId>
			<version>7.74.1.Final</version>
		</dependency>
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-templates</artifactId>
			<version>7.74.1.Final</version>
		</dependency>




		<!--JAX-WS-->
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>2.1.2</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.soap</groupId>
			<artifactId>jakarta.xml.soap-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.ws</groupId>
			<artifactId>jaxws-rt</artifactId>
			<version>4.0.2</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.ws</groupId>
			<artifactId>jakarta.xml.ws-api</artifactId>
			<version>4.0.1</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.1</version>
		</dependency>

		<!--3rd party library-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.janino</groupId>
			<artifactId>janino</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.0.0-jre</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>
		<dependency>
			<groupId>com.auth0</groupId>
			<artifactId>java-jwt</artifactId>
			<version>4.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>


		<!--TEST-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-contract-wiremock</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>1.0.2</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.yaml</groupId>
					<artifactId>snakeyaml</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>de.flapdoodle.embed</groupId>
			<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
			<version>4.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>4.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>it.ozimov</groupId>
			<artifactId>embedded-redis</artifactId>
			<version>0.7.3</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.thoughtworks.xstream</groupId>
				<artifactId>xstream</artifactId>
				<version>1.4.21</version>
			</dependency>
			<dependency>
				<groupId>net.minidev</groupId>
				<artifactId>json-smart</artifactId>
				<version>2.5.2</version>
			</dependency>
			<dependency>
				<groupId>com.azure.spring</groupId>
				<artifactId>spring-cloud-azure-dependencies</artifactId>
				<version>5.22.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>2025.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.projectreactor.netty</groupId>
				<artifactId>reactor-netty-core</artifactId>
				<version>1.1.22</version>
			</dependency>
			<dependency>
				<groupId>io.projectreactor.netty</groupId>
				<artifactId>reactor-netty-http</artifactId>
				<version>1.1.22</version>
			</dependency>
			<dependency>
				<groupId>org.mvel</groupId>
				<artifactId>mvel2</artifactId>
				<version>2.5.2.Final</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${project.parent.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>7.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<prefix>git</prefix>
					<verbose>false</verbose>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
					</generateGitPropertiesFilename>
					<excludeProperties>
						<excludeProperty>git.build.host</excludeProperty>
						<excludeProperty>.*\.user\..*</excludeProperty>
					</excludeProperties>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
					</gitDescribe>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>6.6.0</version>
				<executions>
					<execution>
						<id>idpay-admissibility-assessor-pdnd-client</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/wsdocs/pdnd/pdnd-v1.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
								<basePackage>it.gov.pagopa.common.pdnd.generated</basePackage>
								<modelPackage>it.gov.pagopa.common.pdnd.generated.dto</modelPackage>
								<apiPackage>it.gov.pagopa.common.pdnd.generated.api</apiPackage>
								<configPackage>it.gov.pagopa.common.pdnd.generated.config</configPackage>
								<dateLibrary>java17</dateLibrary>
								<useSpringBoot3>true</useSpringBoot3>
								<useJakartaEe>true</useJakartaEe>
							</configOptions>
							<modelNameSuffix>DTO</modelNameSuffix>
						</configuration>
					</execution>
					<execution>
						<id>idpay-admissibility-assessor-pdnd-residence-assessment-client</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/wsdocs/anpr/C001-consultazioneANPR.yml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
								<basePackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.residence.assessment.client</basePackage>
								<modelPackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.residence.assessment.client.dto
								</modelPackage>
								<apiPackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.residence.assessment.client.api
								</apiPackage>
								<configPackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.residence.assessment.client.config
								</configPackage>
								<dateLibrary>java17</dateLibrary>
								<useSpringBoot3>true</useSpringBoot3>
								<useJakartaEe>true</useJakartaEe>
							</configOptions>
							<modelNameSuffix>DTO</modelNameSuffix>
						</configuration>
					</execution>
					<execution>
						<id>idpay-admissibility-assessor-pdnd-family-status-assessment-client</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<phase>process-resources</phase>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/wsdocs/anpr/C021-servizioAccertamentoStatoFamiglia.yaml</inputSpec>
							<generatorName>java</generatorName>
							<library>webclient</library>
							<generateApiDocumentation>false</generateApiDocumentation>
							<generateApiTests>false</generateApiTests>
							<generateModelTests>false</generateModelTests>
							<generateSupportingFiles>true</generateSupportingFiles>
							<configOptions>
								<swaggerAnnotations>false</swaggerAnnotations>
								<openApiNullable>false</openApiNullable>
								<basePackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.family.status.assessment.client</basePackage>
								<modelPackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.family.status.assessment.client.dto
								</modelPackage>
								<apiPackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.family.status.assessment.client.api
								</apiPackage>
								<configPackage>it.gov.pagopa.admissibility.generated.openapi.pdnd.family.status.assessment.client.config
								</configPackage>
								<dateLibrary>java17</dateLibrary>
								<useSpringBoot3>true</useSpringBoot3>
								<useJakartaEe>true</useJakartaEe>
							</configOptions>
							<modelNameSuffix>DTO</modelNameSuffix>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.sun.xml.ws</groupId>
				<artifactId>jaxws-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>isee-indicatore</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>wsimport</goal>
						</goals>
						<configuration>
							<wsdlDirectory>${project.basedir}/src/main/resources/wsdocs/inps/indicatore</wsdlDirectory>
							<wsdlLocation>/wsdocs/inps/indicatore/ConsultazioneISEE_v2.8_PDND.wsdl</wsdlLocation>
							<packageName>it.gov.pagopa.admissibility.generated.soap.ws.client.indicatore</packageName>
							<sourceDestDir>${project.build.directory}/generated-sources/wsimport/indicatore/</sourceDestDir>
							<bindingFiles>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/indicatore/ConsultazioneISEE_async_mapping.xml</bindingFile>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/ConsultazioneISEE_IdentityHeader.xsd</bindingFile>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/ISEE_EsitoConsultazioneIndicatore.xsd</bindingFile>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/ISEE_TipiComuni.xsd</bindingFile>
							</bindingFiles>
							<keep>true</keep>
							<verbose>true</verbose>
						</configuration>
					</execution>
					<execution>
						<id>isee-soglia</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>wsimport</goal>
						</goals>
						<configuration>
							<wsdlDirectory>${project.basedir}/src/main/resources/wsdocs/inps/soglia</wsdlDirectory>
							<wsdlLocation>/wsdocs/inps/soglia/ConsultazioneISEE.wsdl</wsdlLocation>
							<packageName>it.gov.pagopa.admissibility.generated.soap.ws.client.soglia</packageName>
							<sourceDestDir>${project.build.directory}/generated-sources/wsimport/soglia/</sourceDestDir>
							<bindingFiles>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/soglia/ConsultazioneSogliaISEE_async_mapping.xml</bindingFile>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/ConsultazioneISEE_IdentityHeader.xsd</bindingFile>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/ISEE_EsitoConsultazioneIndicatore.xsd</bindingFile>
								<bindingFile>${project.basedir}/src/main/resources/wsdocs/inps/ISEE_TipiComuni.xsd</bindingFile>
							</bindingFiles>
							<keep>true</keep>
							<verbose>true</verbose>
					</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
